Fix contact page: heading hierarchy, orphaned tags, spacing, CSS width overflow, script order, LinkedIn text

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -368,7 +368,7 @@ footer li {
 .contact-section {
   background-image: url("../img/contact-section.webp");
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-size: cover;
   background-position: 30% 70%;
 }
